--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "icons": "^1.0.0",
-    "components": "^0.1.0",
-    "src": "^1.1.2"
+    "react": "18.2.0",
+    "react-dom/client": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
